--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ subjects:
 - !lcsh 'Short stories'
 - !lcsh 'Africa, North -- Fiction'
 - !lcsh 'Adventure stories'
+- GITenberg
 tableOfContents: The City of the Seven Shadows -- A Sappho of the sand -- The secret
   of Sâ -- The Three Dwarfs of Lebo -- The coming of Allah -- The evil of the Thousand
   Eyes -- The gate of Hell -- The Queen of the Silent Kingdom -- The Father of the
